// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastMessage should match a snapshot when pass different props 1`] = `
<div
  className="toast visible"
  data-test="toast-wrapper"
  onClick={[MockFunction]}
>
  <Button
    fullWidth={true}
    type="reset"
    variant="primary"
  >
    Toast message
  </Button>
</div>
`;

exports[`ToastMessage should match a snapshot with default baseProps 1`] = `
<div
  className="toast"
  data-test="toast-wrapper"
  onClick={[MockFunction]}
>
  <Button
    fullWidth={true}
    type="reset"
    variant="primary"
  >
    Toast message
  </Button>
</div>
`;
